# ira-universe

./: .gitignore  .mcp.json.example  AGENTS.md  CONTRIBUTING.md  README.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
data/knowledge/: demo_email_workflow.md  demo_product_specs.md  demo_sales_cycle_analysis.md  demo_sales_playbook.md
docs/: AGENT_LOOP_STANDARD.md  ARCHITECTURE.md  CURSOR_AGENTIC_LOOP.md  CURSOR_WORKFLOWS.md  DATA_PRIVACY.md  INDEX.md  IRA_BIRTH_CERTIFICATE.md  IRA_INSTRUMENT_GUIDE.md  IRA_SAMPLE_PROMPTS.md  IRA_TRIANGULATION.md  LONG_RUNNING_HARNESS.md  PIPELINE_AUDIT.md  PUBLIC_PRIVATE_BOUNDARY.md  TIMEOUT_MODEL.md  VISITOR_MCP.md  WHY_IRA.md
examples/: README.md  sample_customer_context.md  sample_email_thread.md  sample_leads.csv  sample_quote_context.md
examples/marketing/: case_study_workflow.md
examples/public_demo/: demo_batch_21_leads_report.md  demo_sent_followup_candidates.json  design.md  journey_acme.md  outbound_proof_artifacts.json  recruitment_scoring_system.json
examples/public_demo/deck_briefs/: demo-acme-thermoformer.md
scripts/: public_export_guard.sh
src/ira_universe/: __init__.py  business_case.py  corpus.py  demos.py  mcp_server.py  schemas.py
tests/: test_ira_universe_mcp.py
