[tool.poetry]
name = "ira-universe"
version = "0.1.0"
description = "Public-safe Ira visitor MCP for Claude Code (architecture + adoption, no CRM/Gmail)"
authors = ["Machinecraft <maintainers@example.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "ira_universe", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
mcp = ">=1.0"
pydantic = "^2.0"

[tool.poetry.scripts]
ira-universe-mcp = "ira_universe.mcp_server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
